Implemeted pagination for admin-All navigation